update mobile navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>Manage Landing Page</title>
   </head>
   <body>
+    <div class="overlay"></div>
+    <nav>
+      <div class="logo">
+        <img src="./assets/images/logo.svg" alt="logo" />
+      </div>
+
+      <div>
+        <img
+          class="menu-button active"
+          src="./assets/images/icon-hamburger.svg"
+          alt="hamburger icon"
+        />
+
+        <img
+          class="menu-button"
+          src="./assets/images/icon-close.svg"
+          alt="close icon"
+        />
+      </div>
+
+      <ul class="menu">
+        <li><a href="#top">Pricing</a></li>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Community</a></li>
+      </ul>
+    </nav>
+
     <script src="script.js"></script>
   </body>
 </html>
